--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.3.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "steam-user": "^4.27.0"
   }
 }
