--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "steam-user": "^4.27.0"
+    "express": "^4.18.2"
   }
 }
